2002-09-18  Richard Williamson  <rjw@apple.com>

        Added documentation keywords to header.
        
        * WebView.subproj/WebDocument.h:

2002-09-18  Richard Williamson  <rjw@apple.com>

        Added documentation keywords to headers.
        Made reset a private method.
        
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebFrame.h:
        * WebView.subproj/WebFrame.m:
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame reset]):

2002-09-18  Richard Williamson  <rjw@apple.com>
    
        Added documentation keywords to headers.
    
        * WebView.subproj/WebView.h:

2002-09-18  Richard Williamson  <rjw@apple.com>

        Added documentation keywords to headers.
        
        * WebView.subproj/WebDataSource.h:

2002-09-18  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebController.h: Fix typo.

2002-09-18  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebController.h: Add getters.
        * WebView.subproj/WebController.m:
        (-[WebController applicationNameForUserAgent]): Added.
        (-[WebController userAgent]): Added.

2002-09-17  Darin Adler  <darin@apple.com>

	Fix bug where image documents were broken.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer drawClippedToValidInRect:fromRect:]): loadStatus of 0
	means the whole image is ready, not 0 scan lines; so check > 0, not >= 0.

        * WebKit.pbproj/project.pbxproj: Let Project Builder be the boss of me.

2002-09-17  Richard Williamson   <rjw@apple.com>

        * History.subproj/WebHistory.h:
        * History.subproj/WebHistory.m:
        (-[WebHistory addEntryForURLString:]):
        (-[WebHistory containsEntryForURLString:]):
        Added URL string API.  We should remove use of
        NSURL from this API.
        
        * History.subproj/WebHistoryPrivate.h:
        * History.subproj/WebHistoryPrivate.m: