@@ -1,3 +1,15 @@
+2002-09-18  Darin Adler  <darin@apple.com>
+
+	- fixed 3053155 -- REGRESSION: Activity Window thinks 0-byte
+	images are "complete"
+
+	I thought I had fixed it before, but this is needed too.
+
+        * WebView.subproj/WebLoadProgress.m:
+        (-[WebLoadProgress init]): Set "bytes so far" to 0, not -1.
+        (-[WebLoadProgress initWithResourceHandle:]): Make sure we set total
+	to -1, not 0, when the response is nil.
+
 2002-09-18  Richard Williamson  <rjw@apple.com>
 
         Added documentation keywords to header.
